--- a/nysdot_slf.Rmd
+++ b/nysdot_slf.Rmd
@@ -12,25 +12,26 @@ c <- read_sf("data/shapefiles/cb_2018_us_county_20m.shp")
 c <- c[c$STATEFP %in% c("34","36", "42", "09"),] 
 # https://www.mercercountypa.gov/dps/state_fips_code_listing.htm
 
+# load all state boundaries
 state_bounds <- 
-  rnaturalearth::ne_states(returnclass = "sf")  %>%
-  st_transform(crs = st_crs(c)) %>%
-  st_crop((raster::extent(c) + c(-5,-5,5,5)))
+  rnaturalearth::ne_states(returnclass = "sf", 
+                           country = "United States of America")  %>%
+  st_transform(crs = st_crs(c))
+
+# get state boundaries just for northeast
+ne <- state_bounds[state_bounds$region == "Northeast",]
 ```
 
 # make a map
 ```{r}
-state_bounds <- 
-  rnaturalearth::ne_states(returnclass = "sf", 
-                           country = "United States of America")  %>%
-  st_transform(crs = st_crs(c)) %>%
-  st_filter(region = "Northeast")
 
+# make a basic map of Northeast
 ggplot() +
+  geom_sf(aes(), fill = "lightgray", color = "darkgray", data = ne) +
   geom_sf(aes(), data = c, fill = "gray") +
-    geom_sf(aes(), fill = "blue", data = state_bounds) +
-  geom_sf(aes(), data = c, fill = "gray") 
+  theme_bw()
 
+ggsave("figures/northeast.png", height = 5, width = 5, dpi = 400)
 
 ```
 
